chapter_quarkus/lab/quarkus-workshop-super-heroes/super-heroes/rest-villain/target/kubernetes/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "8084"
    app.quarkus.io/commit-id: 689c73f2946b3455da2652bf3bdc1c9000800548
    app.quarkus.io/vcs-url: https://github.com/gabo10096/bbva_ninja.git
    app.quarkus.io/build-timestamp: 2020-10-02 - 20:26:25 +0000
    prometheus.io/scrape: "true"
  labels:
    app.kubernetes.io/name: rest-villain
    app.kubernetes.io/version: "01"
  name: rest-villain
spec:
  ports:
  - name: http
    port: 8084
    targetPort: 8084
  selector:
    app.kubernetes.io/name: rest-villain
    app.kubernetes.io/version: "01"
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "8084"
    app.quarkus.io/commit-id: 689c73f2946b3455da2652bf3bdc1c9000800548
    app.quarkus.io/vcs-url: https://github.com/gabo10096/bbva_ninja.git
    app.quarkus.io/build-timestamp: 2020-10-02 - 20:26:25 +0000
    prometheus.io/scrape: "true"
  labels:
    app.kubernetes.io/name: rest-villain
    app.kubernetes.io/version: "01"
  name: rest-villain
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rest-villain
      app.kubernetes.io/version: "01"
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8084"
        app.quarkus.io/commit-id: 689c73f2946b3455da2652bf3bdc1c9000800548
        app.quarkus.io/vcs-url: https://github.com/gabo10096/bbva_ninja.git
        app.quarkus.io/build-timestamp: 2020-10-02 - 20:26:25 +0000
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/name: rest-villain
        app.kubernetes.io/version: "01"
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: user/rest-villain:01
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/live
            port: 8084
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: rest-villain
        ports:
        - containerPort: 8084
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/ready
            port: 8084
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
      serviceAccount: rest-villain
