chapter_quarkus/lab/quarkus-workshop-super-heroes/super-heroes/rest-villain/target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8084"
    app.openshift.io/vcs-url: https://github.com/gabo10096/bbva_ninja.git
    app.quarkus.io/commit-id: 689c73f2946b3455da2652bf3bdc1c9000800548
    app.quarkus.io/vcs-url: https://github.com/gabo10096/bbva_ninja.git
    app.quarkus.io/build-timestamp: 2020-10-02 - 20:26:25 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
  labels:
    app.kubernetes.io/name: rest-villain
    app.kubernetes.io/version: "01"
    app.openshift.io/runtime: quarkus
  name: rest-villain
spec:
  ports:
  - name: http
    port: 8084
    targetPort: 8084
  selector:
    app.kubernetes.io/name: rest-villain
    app.kubernetes.io/version: "01"
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    prometheus.io/port: "8084"
    app.openshift.io/vcs-url: https://github.com/gabo10096/bbva_ninja.git
    app.quarkus.io/commit-id: 689c73f2946b3455da2652bf3bdc1c9000800548
    app.quarkus.io/vcs-url: https://github.com/gabo10096/bbva_ninja.git
    app.quarkus.io/build-timestamp: 2020-10-02 - 20:26:25 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
  labels:
    app.kubernetes.io/name: rest-villain
    app.kubernetes.io/version: "01"
    app.openshift.io/runtime: quarkus
  name: rest-villain
spec:
  replicas: 3
  selector:
    app.kubernetes.io/name: rest-villain
    app.kubernetes.io/version: "01"
  template:
    metadata:
      annotations:
        prometheus.io/port: "8084"
        app.openshift.io/vcs-url: https://github.com/gabo10096/bbva_ninja.git
        app.quarkus.io/commit-id: 689c73f2946b3455da2652bf3bdc1c9000800548
        app.quarkus.io/vcs-url: https://github.com/gabo10096/bbva_ninja.git
        app.quarkus.io/build-timestamp: 2020-10-02 - 20:26:25 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
      labels:
        app.kubernetes.io/name: rest-villain
        app.kubernetes.io/version: "01"
        app.openshift.io/runtime: quarkus
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: JAVA_APP_JAR
          value: /deployments/rest-villain-01-runner.jar
        - name: JAVA_LIB_DIR
          value: /deployments/lib
        - name: JAVA_CLASSPATH
          value: /deployments/lib/io.quarkus.quarkus-security-runtime-spi-1.7.2.Final.jar:/deployments/lib/io.quarkus.quarkus-development-mode-spi-1.7.2.Final.jar:/deployments/lib/org.reactivestreams.reactive-streams-1.0.3.jar:/deployments/lib/io.smallrye.reactive.mutiny-0.7.0.jar:/deployments/lib/io.quarkus.security.quarkus-security-1.1.2.Final.jar:/deployments/lib/jakarta.el.jakarta.el-api-3.0.3.jar:/deployments/lib/jakarta.interceptor.jakarta.interceptor-api-1.2.5.jar:/deployments/lib/jakarta [...]
        - name: JAVA_OPTIONS
          value: -Dquarkus.http.host=0.0.0.0 -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        image: user/rest-villain:01
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/live
            port: 8084
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: rest-villain
        ports:
        - containerPort: 8084
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health/ready
            port: 8084
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
      serviceAccount: rest-villain
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - rest-villain
      from:
        kind: ImageStreamTag
        name: rest-villain:01
    type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    prometheus.io/port: "8084"
    app.openshift.io/vcs-url: https://github.com/gabo10096/bbva_ninja.git
    app.quarkus.io/commit-id: 689c73f2946b3455da2652bf3bdc1c9000800548
    app.quarkus.io/vcs-url: https://github.com/gabo10096/bbva_ninja.git
    app.quarkus.io/build-timestamp: 2020-10-02 - 20:26:25 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
  labels:
    app.kubernetes.io/name: rest-villain
    app.kubernetes.io/version: "01"
    app.openshift.io/runtime: quarkus
  name: rest-villain
spec:
  host: ""
  path: /
  port:
    targetPort: 8084
  to:
    kind: Service
    name: rest-villain
